--- a/compose/Dockerfile_test
+++ b/compose/Dockerfile_test
@@ -6,5 +6,4 @@ WORKDIR /code
 COPY . /code/
 
 RUN pip install -r requirements/test.txt
-WORKDIR /code/holiday-offers
-
+WORKDIR /code/holiday_offers
